--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,6 +2,9 @@
 @tailwind components;
 @tailwind utilities;
 
+html, body{
+  scroll-behavior: smooth;
+}
 @layer base{
   body{
     @apply bg-[#fbf1c7] text-[#282828] tracking-wide
